--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@vue/cli-service": "~5.0.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.5.5"
+    "typescript": "~ 5.1.3",
+    "vuetify": "^3.3.0"
+
   },
   "browserslist": [
     "> 1%",
