--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "@mdi/font": "7.0.96",
     "axios": "^1.4.0",
     "roboto-fontface": "*",
+    "v-mask": "^2.3.0",
+    "vee-validate": "^4.9.6",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^3.3.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/types": "^7.21.4",
     "@types/node": "^18.15.0",
+    "@types/vue-the-mask": "^0.11.1",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^5.0.0",
